--- a/src/Entities/CMakeLists.txt
+++ b/src/Entities/CMakeLists.txt
@@ -1,4 +1,9 @@
 target_sources(SpaceRace PUBLIC
     Entity.hpp
     Entity.cpp
+    EntityController.hpp
+    ControllableEntity.hpp
+    ControllableEntity.cpp
 )
+
+add_subdirectory(Controllers)
