--- a/src/Entities/CMakeLists.txt
+++ b/src/Entities/CMakeLists.txt
@@ -2,8 +2,10 @@ target_sources(SpaceRace PUBLIC
     Entity.hpp
     Entity.cpp
     EntityController.hpp
+    EntityMotion.hpp
     ControllableEntity.hpp
     ControllableEntity.cpp
 )
 
 add_subdirectory(Controllers)
+add_subdirectory(MotionTypes)
