Tons of changes. Add SchemaUnion. Revamp Environment backgrounds. Implement random background element generator. Misc changes to support the above

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(SpaceRace C CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAKE_BUILD_TYPE Debug)
 
 set(CMAKE_INSTALL_PREFIX .)
 set(BUILD_SHARED_LIBS Off)
