--- a/src/Environment/CMakeLists.txt
+++ b/src/Environment/CMakeLists.txt
@@ -1,4 +1,8 @@
 target_sources(SpaceRace PUBLIC
+    Background.hpp
+    Background.cpp
     Environment.hpp
     Environment.cpp
 )
+
+add_subdirectory(Backgrounds)
