--- a/src/Media/CMakeLists.txt
+++ b/src/Media/CMakeLists.txt
@@ -1,6 +1,8 @@
 target_sources(SpaceRace PUBLIC
     Animation.hpp
     Animation.cpp
+    GraphicsWrapper.hpp
+    GraphicsWrapper.cpp
     Playlist.hpp
     Playlist.cpp
     SoundEngine.hpp
